Cloudformation.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'CloudFormation example to configure QBusiness with a trusted token issuer such as Okta or auth0'
Parameters:
  
  LatestAmiId:
    Description: EC2 machine image
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64'
  VpcId:
    Description: ID of the existing VPC
    Type: AWS::EC2::VPC::Id
    ConstraintDescription: must be the ID of an existing VPC
    Default: 'vpc-0a0d70f6f526ea1d9'  
  PublicSubnetIds:
    Description: List of IDs of existing public subnets 
    Type: List<AWS::EC2::Subnet::Id>
    Default: "subnet-0557c44c0c5603b52,subnet-0e0b8d9a94a41f3d9"
  CertificateARN:
    Description: Certificate that needs to be added to the Load Balancer
    Type: String
    Default: 'arn:aws:acm:us-east-1:XXX:certificate/22e64277-84e5-4bf7-ba76-a17473d97ca0'
  authClientId:
    Type: String
    Description: Auth Client App Id
    Default: 'fudNmDq9J0BLqoskBuBC9IcF0gS42es9'
  authDomain:
    Type: String
    Description: Auth Domain
    Default: 'dev-u7kq0c6k8tinjvk3.us.auth0.com'
  authAudience:
    Type: String
    Description: Auth Client App Id
    Default: 'fudNmDq9J0BLqoskBuBC9IcF0gS42es9'
  QApplicationId:
    Type: String
    Description: Q Application Id
    Default: '9bc99980-fc75-46eb-b6ed-8acb6826bbdc'
  IdcApplicationArn:
    Type: String
    Description: Identity Center customer application ARN.
    Default: "arn:aws:sso::XXX:application/ssoins-7223600c29125f80/apl-ded63d24e25ebd20"


Resources:
  QManagedPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Sid: AllowQChat
          Effect: Allow
          Action:
          - "qbusiness:ChatSync"
          Resource: !Sub "arn:${AWS::Partition}:qbusiness:${AWS::Region}:${AWS::AccountId}:application/${QApplicationId}"
        
  QServiceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            AWS:
            - !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:root
          Action:
          - sts:AssumeRole
          - sts:SetContext
          Condition:
            ArnEquals:
              "aws:PrincipalArn": !GetAtt EC2ServiceRole.Arn
      Path: /
      ManagedPolicyArns:
      - !Ref QManagedPolicy
  
  EC2ServiceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
          Action:
          - sts:AssumeRole    
      Path: /
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
  
  EC2ServicePolicy:
    Type: AWS::IAM::ManagedPolicy
    Metadata:
      guard:
        SuppressedRules:
          - IAM_POLICYDOCUMENT_NO_WILDCARD_RESOURCE # CreateTokenWithIAM requires wildcard
    Properties:
      Roles:
        - !Ref EC2ServiceRole
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Sid: AllowAssumeQRole
          Effect: Allow
          Action:
          - "sts:AssumeRole"
          - "sts:SetContext"
          Resource: !GetAtt QServiceRole.Arn
        - Sid: AllowTokenExchange
          Effect: Allow
          Action:
            - "sso-oauth:CreateTokenWithIAM"
          Resource: "*" 
        - Sid: AllowAppConfig
          Effect: Allow
          Action:
            - "appconfig:StartConfigurationSession"
            - "appconfig:GetLatestConfiguration"
          Resource: 
            - !Sub "arn:${AWS::Partition}:appconfig:${AWS::Region}:${AWS::AccountId}:application/*"

  # EC2 and ALB Security Groups
  ELBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Metadata:
      guard:
        SuppressedRules:
        - EC2_SECURITY_GROUP_INGRESS_OPEN_TO_WORLD_RULE # This SG only applies to Internet facing ALB
        - SECURITY_GROUP_INGRESS_CIDR_NON_32_RULE
        - SECURITY_GROUP_MISSING_EGRESS_RULE
    Properties:
      GroupDescription: ELB Security Group
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: HTTPS from Internet
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: HTTP from Internet

  ELBSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: Allow outbound traffic to EC2 Instance
      GroupId: !Ref ELBSecurityGroup
      IpProtocol: "tcp"
      FromPort: 8080
      ToPort: 8080
      DestinationSecurityGroupId: !Ref SecurityGroup

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Metadata:
      guard:
        SuppressedRules:
        - SECURITY_GROUP_MISSING_EGRESS_RULE
    Properties:
      GroupDescription: EC2 Security group
      VpcId: !Ref VpcId  
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 8080
        ToPort: 8080
        SourceSecurityGroupId: !Ref ELBSecurityGroup
        Description: Allow inbound traffic from ALB

  SecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Metadata:
      guard:
        SuppressedRules:
        - EC2_SECURITY_GROUP_EGRESS_OPEN_TO_WORLD_RULE
        - SECURITY_GROUP_EGRESS_ALL_PROTOCOLS_RULE
    Properties:
      Description: Allow all outbound traffic
      GroupId: !Ref SecurityGroup
      IpProtocol: "-1"
      CidrIp: 0.0.0.0/0

  
  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - !Ref EC2ServiceRole

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MaxSize: 1
      MinSize: 1
      DesiredCapacity: 1
      TargetGroupARNs:
        - !Ref EC2TargetGroup
      HealthCheckType: ELB
      HealthCheckGracePeriod: 180
      VPCZoneIdentifier: !Ref PublicSubnetIds

      LaunchTemplate:
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
        LaunchTemplateId: !Ref LaunchTemplate
      Tags:
        - Key: Name
          Value: Custom Q UI
          PropagateAtLaunch: true
  
  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        NetworkInterfaces:
          - DeviceIndex: 0
            AssociatePublicIpAddress: true 
            SubnetId: !Select [0, !Ref PublicSubnetIds]
            Groups: 
              - !Ref SecurityGroup
        EbsOptimized: true
        ImageId: !Ref 'LatestAmiId'
        InstanceType: t3.micro
        IamInstanceProfile:
          Arn: !GetAtt EC2InstanceProfile.Arn
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            max_attempts=5
            attempt_num=1
            success=false
            while [ $success = false ] && [ $attempt_num -le $max_attempts ]; do
              echo "Trying dnf install"
              dnf -y install python3.11 python3.11-pip git
              # Check the exit code of the command
              if [ $? -eq 0 ]; then
                echo "Yum install succeeded"
                success=true
              else
                echo "Attempt $attempt_num failed. Sleeping for 3 seconds and trying again..."
                sleep 3
                ((attempt_num++))
              fi
            done
            max_attempts=5
            attempt_num=1
            success=false
            while [ $success = false ] && [ $attempt_num -le $max_attempts ]; do
              echo "Trying dnf install"
              dnf -y install https://s3.amazonaws.com/aws-appconfig-downloads/aws-appconfig-agent/linux/x86_64/latest/aws-appconfig-agent.rpm
              # Check the exit code of the command
              if [ $? -eq 0 ]; then
                echo "Yum install succeeded"
                success=true
              else
                echo "Attempt $attempt_num failed. Sleeping for 3 seconds and trying again..."
                sleep 3
                ((attempt_num++))
              fi
            done
            mkdir /etc/systemd/system/aws-appconfig-agent.service.d
            echo "[Service]" > /etc/systemd/system/aws-appconfig-agent.service.d/overrides.conf 
            echo "Environment=SERVICE_REGION=${AWS::Region}" >> /etc/systemd/system/aws-appconfig-agent.service.d/overrides.conf
            systemctl daemon-reload
            systemctl enable aws-appconfig-agent
            systemctl restart aws-appconfig-agent
            cd /opt
            git clone https://github.com/fhuthmacher/custom-web-experience-with-amazon-q-business.git
            cd custom-web-experience-with-amazon-q-business/
            pip3.11 install virtualenv
            python3.11 -m virtualenv venv
            venv/bin/pip install -r requirements.txt
            
            echo "Setting environment variables"
            echo "export DOMAIN=${authDomain}" >> /etc/profile.d/my_env_vars.sh
            echo "export AUTH_CLIENT_ID=${authClientId}" >> /etc/profile.d/my_env_vars.sh
            echo "export API_IDENTIFIER=${authAudience}" >> /etc/profile.d/my_env_vars.sh
            echo "export IDC_APPLICATION_ARN=${IdcApplicationArn}" >> /etc/profile.d/my_env_vars.sh
            echo "export AMAZON_Q_APP_ID=${QApplicationId}" >> /etc/profile.d/my_env_vars.sh
            echo "export IAM_ROLE=${QServiceRole.Arn}" >> /etc/profile.d/my_env_vars.sh
            echo "export REGION=${AWS::Region}" >> /etc/profile.d/my_env_vars.sh
            echo "export CALLBACKURL=https://${LowerCaseFqdn.Output}/component/streamlit_oauth.authorize_button/index.html" >> /etc/profile.d/my_env_vars.sh
            echo "export AUTHORIZE_URL=https://${authDomain}/authorize" >> /etc/profile.d/my_env_vars.sh
            echo "export TOKEN_URL=https://${authDomain}/oauth/token" >> /etc/profile.d/my_env_vars.sh
            echo "export REFRESH_TOKEN_URL=https://${authDomain}/oauth/token" >> /etc/profile.d/my_env_vars.sh
            echo "export REVOKE_TOKEN_URL=https://${authDomain}/oauth/revoke" >> /etc/profile.d/my_env_vars.sh
            echo "export STREAMLIT_LOG_LEVEL=debug" >> /etc/profile.d/my_env_vars.sh
            source /etc/profile.d/my_env_vars.sh
            nohup venv/bin/streamlit run src/app.py --server.port=8080 > logs.txt & 

    # Target Group, Listener and Application  Load Balancer
  EC2TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 90
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 45
      HealthyThresholdCount: 5
      Matcher:
        HttpCode: '200'
      Name: EC2TargetGroup
      Port: 8080
      Protocol: HTTP
      TargetGroupAttributes:
      - Key: deregistration_delay.timeout_seconds
        Value: '60'
      UnhealthyThresholdCount: 3
      VpcId: !Ref VpcId

  ALBListener2:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Metadata:
      guard:
        SuppressedRules:
        - ELBV2_ACM_CERTIFICATE_REQUIRED # Certificate is loaded externally for the demo
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 443
      Protocol: HTTPS
      SslPolicy: ELBSecurityPolicy-TLS13-1-2-2021-06
      Certificates:
      - CertificateArn: !Ref CertificateARN
      DefaultActions:
      - Type: forward
        TargetGroupArn: !Ref EC2TargetGroup
        Order: 1
  
  ALBListener80:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Metadata:
      guard:
        SuppressedRules:
        - ELBV2_LISTENER_PROTOCOL_RULE # Not required for the demo
        - ELBV2_LISTENER_SSL_POLICY_RULE # NO SSL Policy for an HTTP listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Order: 1
          RedirectConfig: 
            Protocol: "HTTPS"
            Port: "443"
            Host: "#{host}"
            Path: "/#{path}"
            Query: "#{query}"
            StatusCode: "HTTP_301"
          Type: "redirect"

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Metadata:
      guard:
        SuppressedRules:
        - ELB_DELETION_PROTECTION_ENABLED # Not required for the demo
        - ELBV2_ACCESS_LOGGING_RULE # Not required for the demo
    Properties:
      Scheme: internet-facing
      Subnets:
      - !Select [0, !Ref PublicSubnetIds]
      - !Select [1, !Ref PublicSubnetIds]
      SecurityGroups:
      - !Ref ELBSecurityGroup
  
  LowerCaseFqdn:
    Type: Custom::LowerCaseFqdn
    Properties:
      ServiceToken: !GetAtt LowerCaseFunction.Arn
      Input: !GetAtt ApplicationLoadBalancer.DNSName

  LowerCaseFunction:
    Type: AWS::Lambda::Function
    Metadata:
      guard:
        SuppressedRules:
        - LAMBDA_DLQ_CHECK # This a synchronous call no need for DLQ
        - LAMBDA_INSIDE_VPC # No need for VPC
        - LAMBDA_CONCURRENCY_CHECK # Not required for the demo
    Properties:
      Handler: index.handler
      Role: !GetAtt LowerCaseRole.Arn
      Code:
        ZipFile: |
          import cfnresponse
          def error_handler(func):
            def wrapper(*args, **kwargs):
                try:
                    return func(*args, **kwargs)
                except Exception as e:
                    logger.error(e)
                    cfnresponse.send(args[0], args[1], cfnresponse.FAILED, {})
                    return None
            return wrapper

          @error_handler
          def handler(event, context):
            if event["RequestType"] in ["Create", "Update"]:
              response = {}
              cfnresponse.send(event, context, cfnresponse.SUCCESS, {"Output": event['ResourceProperties']['Input'].lower()})
            if event["RequestType"] == "Delete":
              cfnresponse.send(event, context, cfnresponse.SUCCESS, {})
      Runtime: python3.12
      Timeout: 60
  
  LowerCaseRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - lambda.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: /
      ManagedPolicyArns:
      - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"

Outputs:
  URL:
    Description: URL to access the Streamlit APP
    Value:
      !Sub https://${ApplicationLoadBalancer.DNSName}
  RoleArn:
    Description: "ARN of the IAM role required to setup token exchange in Identity Center"
    Value: !GetAtt EC2ServiceRole.Arn
